<?xml version="1.0"?>
<package>
  <name>envi_nav</name>
  <version>1.0.0</version>
  <description>The envi_nav package for turtlebot mapping and navigation</description>

  <maintainer email="sjohns09@terpmail.umc.edu">Samantha Johnson</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend> 
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>base_local_planner</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>base_local_planner</run_depend>

  <test_depend>gtest</test_depend>

  <export>
	<nav_core plugin="${prefix}/RRTPlanner_Plugin.xml" />
  </export>
  
</package>
